--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,3 +11,8 @@ html, body {
   max-width: 100%;
   height: 100%;
 }
+#forgeViewer2 .adsk-viewing-viewer {
+  height: 50% !important;
+  width: 50% !important;
+}
+
